iptables/rules-cn.v4
# Generated by iptables-save v1.8.4 on Sat Jul 16 09:21:35 2022
*nat
:PREROUTING ACCEPT [1880:103413]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [11:800]
:POSTROUTING ACCEPT [11:800]
#-A POSTROUTING -s 10.1.0.0/24 -o eth0 -j MASQUERADE

# HK SSH
-A PREROUTING -d 120.240.48.202 -p tcp --dport 26543 -j DNAT --to-destination 10.1.0.26:26543
-A POSTROUTING -d 10.1.0.26 -p tcp --dport 26543 -j SNAT --to-source 10.1.0.16

# HK AZURE SSH
-A PREROUTING -d 120.240.48.202 -p tcp --dport 12234 -j DNAT --to-destination 10.1.0.26:12234
-A POSTROUTING -d 10.1.0.26 -p tcp --dport 12234 -j SNAT --to-source 10.1.0.16

# HK AZURE XRAY
-A PREROUTING -d 120.240.48.202 -p tcp --dport 32432 -j DNAT --to-destination 10.1.0.26:32432
-A POSTROUTING -d 10.1.0.26 -p tcp --dport 32432 -j SNAT --to-source 10.1.0.16

# HK HGC XRAY
-A PREROUTING -d 120.240.48.202 -p tcp --dport 55230 -j DNAT --to-destination 10.1.0.26:55230
-A POSTROUTING -d 10.1.0.26 -p tcp --dport 55230 -j SNAT --to-source 10.1.0.16

# HK HGC HYSTERIA
-A PREROUTING -d 120.240.48.202 -p tcp --dport 55229 -j DNAT --to-destination 10.1.0.26:55229
-A POSTROUTING -d 10.1.0.26 -p tcp --dport 55229 -j SNAT --to-source 10.1.0.16
-A PREROUTING -d 120.240.48.202 -p udp --dport 55229 -j DNAT --to-destination 10.1.0.26:55229
-A POSTROUTING -d 10.1.0.26 -p udp --dport 55229 -j SNAT --to-source 10.1.0.16

COMMIT
# Completed on Sat Jul 16 09:21:35 2022

# Generated by iptables-save v1.8.4 on Sat Jul 16 09:21:35 2022
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 26542 -j ACCEPT

-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT

# HK SSH
-A FORWARD -d 10.1.0.26 -p tcp --dport 26543 -j ACCEPT

# HK AZURE SSH
-A FORWARD -d 10.1.0.26 -p tcp --dport 12234 -j ACCEPT

# HK AZURE XRAY
-A FORWARD -d 10.1.0.26 -p tcp --dport 32432 -j ACCEPT

# HK HGC XRAY
-A FORWARD -d 10.1.0.26 -p tcp --dport 55230 -j ACCEPT

# HK HGC HYSTERIA
-A FORWARD -d 10.1.0.26 -p tcp --dport 55229 -j ACCEPT
-A FORWARD -d 10.1.0.26 -p udp --dport 55229 -j ACCEPT

COMMIT
# Completed on Sat Jul 16 09:21:35 2022
