iptables/rules-hk.v4
# Generated by iptables-save v1.8.4 on Sat Jul 16 09:22:03 2022
*nat
# HK AZURE SSH
-A PREROUTING -d 10.1.0.26 -p tcp --dport 12234 -j DNAT --to-destination 20.239.187.25:12234
-A POSTROUTING -d 20.239.187.25 -p tcp --dport 12234 -j SNAT --to-source 38.126.55.202

# HK AZURE XRAY
-A PREROUTING -d 10.1.0.26 -p tcp --dport 32432 -j DNAT --to-destination 20.239.187.25:443
-A POSTROUTING -d 20.239.187.25 -p tcp --dport 443 -j SNAT --to-source 38.126.55.202

# HK HGC XRAY
-A PREROUTING -d 10.1.0.26 -p tcp --dport 55230 -j DNAT --to-destination 210.3.211.10:55230
-A POSTROUTING -d 210.3.211.10 -p tcp --dport 55230 -j SNAT --to-source 38.126.55.202

# HK HGC HYSTERIA
-A PREROUTING -d 10.1.0.26 -p tcp --dport 55229 -j DNAT --to-destination 210.3.211.10:55229
-A POSTROUTING -d 210.3.211.10 -p tcp --dport 55229 -j SNAT --to-source 38.126.55.202
-A PREROUTING -d 10.1.0.26 -p udp --dport 55229 -j DNAT --to-destination 210.3.211.10:55229
-A POSTROUTING -d 210.3.211.10 -p udp --dport 55229 -j SNAT --to-source 38.126.55.202

# HK HGC WireGuard
-A PREROUTING -d 10.1.0.26 -p udp --dport 51828 -j DNAT --to-destination 210.3.211.10:51828
-A POSTROUTING -d 210.3.211.10 -p udp --dport 51828 -j SNAT --to-source 38.126.55.202

COMMIT
# Completed on Sat Jul 16 09:21:35 2022

# Generated by iptables-save v1.8.4 on Sat Jul 16 09:22:03 2022
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -s 10.1.0.16 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 26543 -j ACCEPT

-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 10.1.0.16 -j ACCEPT

COMMIT
# Completed on Sat Jul 16 09:22:03 2022
