iptables/rules.v4
# Generated by iptables-save v1.8.4 on Sun Jul  3 08:44:28 2022
*nat
:PREROUTING ACCEPT [1880:103413]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [11:800]
:POSTROUTING ACCEPT [11:800]
# HK AZURE XRAY
-A PREROUTING -d 10.0.0.16 -p tcp --dport 32432 -j DNAT --to-destination 20.239.187.25:443
-A POSTROUTING -d 20.239.187.25 -p tcp --dport 443 -j SNAT --to-source 103.170.26.43

# HK AZURE SSH
-A PREROUTING -d 10.0.0.16 -p tcp --dport 12234 -j DNAT --to-destination 20.239.187.25:12234
-A POSTROUTING -d 20.239.187.25 -p tcp --dport 12234 -j SNAT --to-source 103.170.26.43

# HK HGC HYSTERIA
-A PREROUTING -d 10.0.0.16 -p tcp --dport 55229 -j DNAT --to-destination 210.3.211.10:55229
-A POSTROUTING -d 210.3.211.10 -p tcp --dport 55229 -j SNAT --to-source 103.170.26.43
-A PREROUTING -d 10.0.0.16 -p udp --dport 55229 -j DNAT --to-destination 210.3.211.10:55229
-A POSTROUTING -d 210.3.211.10 -p udp --dport 55229 -j SNAT --to-source 103.170.26.43

# HK HGC XRAY
-A PREROUTING -d 10.0.0.16 -p tcp --dport 55230 -j DNAT --to-destination 210.3.211.10:55230
-A POSTROUTING -d 210.3.211.10 -p tcp --dport 55230 -j SNAT --to-source 103.170.26.43

COMMIT
# Completed on Sun Jul  3 08:44:28 2022
# Generated by iptables-save v1.8.4 on Sun Jul  3 08:44:28 2022
*filter
:INPUT DROP [0:0]
:FORWARD DROP [10:520]
:OUTPUT ACCEPT [26:2752]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 26542 -j ACCEPT

-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT

# HK AZURE XRAY
-A FORWARD -d 20.239.187.25 -p tcp --dport 443 -j ACCEPT

# HK AZURE SSH
-A FORWARD -d 20.239.187.25 -p tcp --dport 12234 -j ACCEPT

# HK HGC HYSTERIA
-A FORWARD -d 210.3.211.10 -p tcp --dport 55229 -j ACCEPT
-A FORWARD -d 210.3.211.10 -p udp --dport 55229 -j ACCEPT

# HK HGC XRAY
-A FORWARD -d 210.3.211.10 -p tcp --dport 55230 -j ACCEPT

COMMIT
# Completed on Sun Jul  3 08:44:28 2022
